# adt_transform

./: Cargo.toml  README.md  d.smt2
src/: helpers.rs  lib.rs  main.rs  parser.rs  transform.rs
test/: array_tuple_element_select_1.expectation  array_tuple_element_select_1.smt2  array_tuple_element_select_2.expectation  array_tuple_element_select_2.smt2  array_tuple_element_select_3.expectation  array_tuple_element_select_3.smt2  array_tuple_element_select_4.expectation  array_tuple_element_select_4.smt2  array_tuple_index_accessor_1.expectation  array_tuple_index_accessor_1.smt2  array_tuple_index_decl_const_1.expectation  array_tuple_index_decl_const_1.smt2  array_tuple_index_decl_fun_1.expectation  array_tuple_index_decl_fun_1.smt2  array_tuple_index_decl_fun_2.expectation  array_tuple_index_decl_fun_2.smt2  array_tuple_index_decl_fun_3.expectation  array_tuple_index_decl_fun_3.smt2  array_tuple_index_decl_var_quant_1.expectation  array_tuple_index_decl_var_quant_1.smt2  array_tuple_index_select_1.expectation  array_tuple_index_select_1.smt2  array_tuple_index_select_2.expectation  array_tuple_index_select_2.smt2  array_tuple_index_select_3.expectation  array_tuple_index_select_3.smt2  array_tuple_index_select_constructor_1.expectation  array_tuple_index_select_constructor_1.smt2  array_tuple_index_select_constructor_2.expectation  array_tuple_index_select_constructor_2.smt2  array_tuple_index_select_constructor_3.expectation  array_tuple_index_select_constructor_3.smt2  basic_declare_const.expectation  basic_declare_const.smt2  exists_var_decl.expectation  (+33 more)
