[package]
name = "adt_transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amzn-smt-ir = { path = "../rust-smt-ir/amzn-smt-ir", version = "0.1" }
amzn-smt-ir-derive = { path = "../rust-smt-ir/amzn-smt-ir-derive", version = "0.1" }
atomic-counter = "1.0.1"
smt2parser = "0.6.1"
num-traits = "0.2"
